--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,30 @@
 name: build
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-central-1
+  
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag 313422618945.dkr.ecr.eu-central-1.amazonaws.com/albes-nextjs-app:$(date +%s)
+      env:
+          REGISTRY: 313422618945.dkr.ecr.eu-central-1.amazonaws.com
+          REPOSITORY: albes-nextjs-app
+          IMAGE_TAG: ${{ github.sha }}
+          
+      run: |
+        docker build . --file Dockerfile --tag $REGISTRY/$REPOSITORY:$IMAGE_TAG
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
